fix client on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -482,6 +482,12 @@ ul {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 767px) {
+  .clients__icon {
+    width: 100%;
+  }
+}
+
 .modal {
   position: absolute;
   top: 50%;
