--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -93,5 +93,9 @@
         transition-property: fill;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        @include for-phone-only {
+            width: 100%;
+        }
     }
 }
